[package]
name = "kfarms_interface"
version = "0.1.0"
description = "Interface for Kamino KFarms program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kfarms_interface"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
